联网搜索功能单独加入服务层
